# techandsociety-ai.github.io

./: .gitattributes  .gitignore  .mcpbignore  AGENTS.md  BATCH_TOOLS_GUIDE.md  BIGQUERY_CROSSTAB_GUIDE.md  CODE_EXECUTION_READY.md  CROSS_PLATFORM_GUIDE.md  DATA_PROCESSING.md  FIX_SUMMARY.md  INSTALL.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  MCPB_BUNDLE_README.md  MCPB_BUNDLE_SUMMARY.md  MIGRATION_PLAN.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PRESENTATION_PROMPT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SOLUTION.md  WAVE_BASED_WORKFLOW.md  build.sh  build_mcpb.sh  buildplan.md  chip50MCP.mcpb  create_all_wave_views.sh  data_setup.sh  example_prompt.md  import_chip_data_add_question_vars.py  install.ps1  install.sh  manifest.json  merge_w38.py  mkdocs.yml  pack_mcpb.sh  process_and_upload_data.sh  (+11 more)
.mcpb_build/: QUICKSTART.md  README.md  SETUP.md  check_install.sh  install.sh  manifest.json
credentials/: .gitignore
data/: CSP_W35.1.csv  CSP_W35.csv
docs/: AGENTS.md  CNAME  _config.yml  index.html  index.md  mcp.html  report-america-meets-ai.html  report-depression-heatmap.html  report-depression.html  report-social-media-trust.html  report-who-posts-politics.html
gold_standard_reports/: cuba_military_force_report.docx  gerrymandering_amendment_report.docx  glp1_use_report.docx  prompts.md
mcp_server/: mcpb.json  pyproject.toml  server.py
remote-mcp/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NEW_DATA_PLAYBOOK.md  QUICKSTART.md  README.md  SETUP.md  claude_desktop_config.example.json  configure_claude.sh  deploy.sh  load_data.sh  load_wave_dates.py  pyproject.toml  question_wording.py  requirements.txt  server.py  test_local.sh  test_regression.py  toggle_auth.sh
remote-mcp/sql/: create_panel_data.sql  create_schema.sql  create_synthetic_data.sql
scripts/: merge_plumbing.py
(+34 files in other folders)
